[package]
name = "cyberpunk_display"
version = "0.1.0"
authors = ["WestXu <xu-lai-xi@qq.com>"]
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
ansi_term = "0.12.1"
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
tokio = { version = "1.37.0", features = ["full"] }
url = '2.5.0'
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["blocking"] }
clap = { version = "4.5.4", features = ["derive"] }
serialport = { version = "4.2", optional = true }
chrono = "0.4.38"
anyhow = "1.0.83"
futures = "0.3.30"
async-stream = "0.3.5"

[dev-dependencies]
rand = "0.8.5"

[features]
nixie = ["dep:serialport"]
