[package]
name = "cyberpunk_display"
version = "0.1.0"
authors = ["WestXu <xu-lai-xi@qq.com>"]
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36", features = [
    "maths",
    "serde-float",
    "serde-with-arbitrary-precision", # must enable when enabled arbitrary_precision of serde_json
] }
rust_decimal_macros = { version = "1.36" }
ansi_term = "0.12.1"
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
tokio = { version = "1.37.0", features = ["full"] }
url = '2.5.0'
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = [
    "rustls-tls-webpki-roots",
], default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
serialport = { version = "4.2", optional = true }
chrono = "0.4.38"
anyhow = "1.0.83"
futures = "0.3.30"
async-stream = "0.3.5"
simplelog = "0.12.2"
uuid = { version = "1.16.0", features = ["v4"] }
log = "0.4.19"

[dev-dependencies]
rand = "0.8.5"

[features]
nixie = ["dep:serialport"]
